update project technology tags to have correct spacing

--- a/src/styles/layout/_project.scss
+++ b/src/styles/layout/_project.scss
@@ -6,11 +6,12 @@
   }
 }
 
-ul.language-tag {
+.language-tag {
   margin: 0;
   padding: 0;
 
   li {
+    margin: 2px;
     display: inline-block;
     padding: 4px;
     border-radius: 5px;
